Added new Project

--- a/style.css
+++ b/style.css
@@ -374,7 +374,8 @@ article .icon {
   background: rgb(250, 250, 250);
   margin: 5px;
   float: left;
-  width: 230px;
+  width: 180px;
+  height: 350px;
   
 }
 
